fixed structure/enhanced readability of text and grammatical errors site-wide

--- a/urec_app/static/css/base.css
+++ b/urec_app/static/css/base.css
@@ -42,6 +42,10 @@ td {
     background-repeat: no-repeat;
     background-size: cover; 
     background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 
@@ -78,6 +82,30 @@ td {
 
 .text-bg-maroon-light{
     background-color: rgba(94, 23, 38, 0.2);
+}
+
+.outlined-header-text {
+    color: rgb(94, 23, 38);
+    -webkit-text-stroke: 1px white;
+    text-align: center;
+    font-weight: bold;
+}
+
+.outlined-subheader-text {
+    color: rgb(94, 23, 38);
+    -webkit-text-stroke: 0.5px white;
+    text-align: center;
+    font-weight: bold;
+}
+
+.vh-100 {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -125px;
 }
 
 .form-btn{
@@ -521,6 +549,10 @@ classes below @media function will be used instead of above*/
       
 
 }
+
+
+
+
 
 /* Begin Form CSS*/
       .form-control:focus{
